# datascience-base

./: .flake8  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dsbase/drift_check/: adversarial_validation.py
notebooks/samples/drift_check/: adversarial_validation.ipynb
tests/drift_check/: test_adversarial_validation.py
