[project]
name = "dsbase"
version = "0.1.0"
description = ""
authors = [
    {name = "takutori",email = "t.taichi.takutori.0214@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "optuna-integration (>=4.5.0,<5.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "polars (>=1.35.1,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = { version = "*", source = "pytorch-cu121" }
torchvision = { version = "*", source = "pytorch-cu121" }
torchaudio = { version = "*", source = "pytorch-cu121" }
