[tool.poetry]
name = "dsbase"
version = "0.1.0"
description = "Data science base project"
authors = ["takutori <t.taichi.takutori.0214@gmail.com>"]
readme = "README.md"
packages = [{ include = "dsbase" }]  # src/レイアウトなら: { from = "src", include = "dsbase" }

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = ">=2.3.4,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
jupyterlab = ">=4.4.10,<5.0.0"
optuna = ">=4.5.0,<5.0.0"
optuna-integration = ">=4.5.0,<5.0.0"
plotly = ">=6.3.1,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
lightgbm = ">=4.6.0,<5.0.0"
statsmodels = ">=0.14.5,<0.15.0"
imbalanced-learn = ">=0.14.0,<0.15.0"
polars = ">=1.35.1,<2.0.0"
xgboost = ">=3.1.1,<4.0.0"
catboost = ">=1.2.8,<2.0.0"

# Devツールは dev グループ（CIで --with dev）
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^25.0"
flake8 = "^7.0"
isort = "^5.13"
mypy = "^1.10"

# GPUは gpu グループ（ローカルで --with gpu）
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.gpu.dependencies]
torch = { version = "2.5.1", source = "pytorch-cu121" }
torchvision = { version = "0.20.1", source = "pytorch-cu121" }
torchaudio = { version = "2.5.1", source = "pytorch-cu121" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ---- Tool configs ----
[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", "dist", "build", "__pycache__"]

[tool.mypy]
ignore_missing_imports = true
